# bias

./: README.md
AutoCAD/Gabinete Puente H/: CostadoCortoGabinete.dwg  ParteBajaGabinete.dwg
Documentacion/Cableado/: Sistema de Emergencias.md  Sistema de Filtros.md  Sistema de Recepción.md
Documentacion/Carpeta Técnica/: Manual Tecnico.tex  ManualTecnico.tex
Documentacion/Carpeta de Campo/: CarpetaDeCampo.tex
Documentacion/Informe Técnico ONIET/: main.tex
Documentacion/Manual de Usuario/: ManualDeUsuario.tex
Modelado 3D/Sistema de emergencias/: ParteSuperior1.stl  SistemaEmergenciasFull.bak
PaginaWeb/: index.html
Página Web/: component.jsx  globals.css  layout.jsx
Página Web/css/: MeetTheTeam.css  gallery.css
Página Web/html/: MeetTheTeam.html  gallery.html
Página Web/js/: gallery.js
bias/: pyvenv.cfg
circuitos/Cableado/: Batería 24V.md  EEG.md  Motor.md  Placa Reguladora 24V-15V-5V.md  Placa reguladora 24V-15V.md  Puente H.md  Raspberry Pi 4.md  Raspberry Pi Pico.md  Sistema de Offset.md
codigo/ArduinoJoystick/: joystick.ino
codigo/EEG/: ai.py  app.py  bci_iv_2a.py  bias.ipynb  bias.py  bias_ai.py  bias_ai2.py  bias_dsp.py  bias_graphing.py  bias_motors.py  bias_reception.py  extraction.py  filtering.py  filtering2.py  graphing.py  graphingPython.py  graphingTerminal.py  ia.py  main.py  main2.py  masteri2c.py  motor_task.py  prediction.py  preprocessing.py  reception.py  run_task.py  signals.py
codigo/Emergencia/: main.py  main2.py  main3.py  motor2.py  pwm.py
codigo/IA/: ia.py  (+2 more)
codigo/PicoEEG/: CMakeLists.txt  recepcion.c  reception.c
(+184 files in other folders)
